Changelog for ghcid

0.6.9, released 2018-01-26
    #121, add a --poll flag to use polling instead of notifiers
    Require time-1.5 or above
    #124, add timestamp to "All good" message
    After the test completes write a message
0.6.8, released 2017-11-10
    #110, work even if -v0 is passed to ghci
    Read additional arguments from .ghcid file if present
0.6.7, released 2017-09-17
    #104, add --ignore-loaded flag for use with -fobject-code
    #103, deal with new GHC error formatting
0.6.6, released 2016-11-11
    #89, exit sooner when the child process exits unexpectedly
    Add Eq instance for Ghci
    #88, add a --project flag
    Rename --notitle flag to --no-title
0.6.5, released 2016-08-10
    #82, properly deal with warning messages including spans
    #78, support boot files better
    Better support for dealing with GHC 8.0 call stack messages
    #79, support multiple --test flags
    #71, improve multi-project stack support
    #74, make sure Cygwin terminals flush output properly
    If the test exits then exit ghcid
0.6.4, released 2016-05-13
    #69, fix up for stack project with file arguments
0.6.3, released 2016-05-11
    #68, add --no-status to avoid printing the reloading message
0.6.2, released 2016-04-25
    #63, detect test failures and update the titlebar/icon
    #66, add --warnings to run tests even in there are warnings
    #62, find stack.yaml in the parent directory
    Make --verbose echo all things sent to stdin
    #57, support wrappers that access stdin first (e.g. stack)
    #67, make --reload/--restart recurse through directories
    #61, deal with drive letters in files (for stack on Windows)
    #58, improve the --help message
0.6.1, released 2016-04-06
    Add --reload to add files that reload, but do not restart
    #56, allow --restart to take directories
0.6, released 2016-04-06
    #38, implement loading with stack
    Add process, quit and execStream to the API
    #29, add interrupt function